# ScamCrawler

./: .env.example  .gitignore  README.md  humanbank104.json  main.py  pyproject.toml  requirements.txt
src/: analyzer.py  exception.py  googlesearch.py  handler.py  model.py  utils.py  websites.py
